# gto-plus-plus

gto++/: .gitignore  CMakeLists.txt
gto++/include/: action.h  action_abstraction.h  game_model.h  game_state.h  info_set.h  range.h  solver.h  tree.h
gto++/include/action/: action.h  fixed_abstraction.h  per_street_abstraction.h
gto++/include/action_abstraction/: action_abstraction.h  fixed_abstraction.h  per_street_abstraction.h
gto++/include/game/: game_model.h  game_state.h
gto++/include/solver/: range.h  solver.h
gto++/include/tree/: info_set.h  node.h  tree.h
gto++/include/utils/: utils.h
gto++/src/: action.cpp  main.cpp
gto++/src/action/: action.cpp  fixed_abstraction.cpp  per_street_abstraction.cpp
gto++/src/action_abstraction/: fixed_abstraction.cpp  per_street_abstraction.cpp
gto++/src/game/: game_model.cpp  game_state.cpp
gto++/src/tree/: info_set.cpp  tree.cpp
gto++/src/utils/: utils.cpp
gto++/tests/: CMakeLists.txt  test_action.cpp  test_action_abstraction.cpp
gto++/tests/action/: test_action.cpp
gto++/tests/game/: test_game_model.cpp  test_game_state.cpp
